--- a/bower.json
+++ b/bower.json
@@ -5,3 +5,9 @@
     "ionic": "driftyco/ionic-bower#1.0.0-beta.14"
   }
 }
+
+"dependencies" : {
+  "auth0-angular": "3.*",
+  "a0-angular-storage": ">= 0.0.6",
+  "angular-jwt": ">= 0.0.4"
+},
